Small Update To Ensure Page Content Visibility

--- a/style.css
+++ b/style.css
@@ -30,3 +30,9 @@ body {
 	-moz-osx-font-smoothing: grayscale;
 	-webkit-font-smoothing: antialiased;
 }
+
+.header-cart-icon {
+	width: 3rem;
+	height: 3rem;
+	display: block;
+}
